# SBM-Harness

./: .coverage  .coveragerc  .gitignore  DIGITAL_ASSETS_INVENTORY.md  DIGITAL_ASSETS_REPORT.json  IMPROVEMENTS.md  LICENSE  Makefile  PHYSICAL_CONSTANTS.md  README-validator.md  README.md  RECOVERY_LOGS.json  SBM_014_IMPLEMENTATION.md  SUMMARY.md  VALIDATION_GATE.md  bug_report_widget.py  check_coverage.py  check_digital_assets.py  event_validator.py  example_sbm_014_integration.py  fault_engine.py  gate_runner.py  generate_audit_report.py  models.py  package.json  pyproject.toml  registry_loader.py  renderer.py  requirements.txt  run_batch.py  safety_gate.py  sbm_014_causal_echo.py  sbm_config.yaml  sbm_log_schema.json  sbm_log_validator.py  sim.c  simulation.py  test_fault_engine.py  validate-sbm-log.js
.github/workflows/: ci.yml  validation-gate.yml
artifacts/: AUDIT_REPORT_AUTO.md  DIGITAL_ASSETS_INVENTORY.md  DIGITAL_ASSETS_REPORT.json
docs/: SAFETY_MANUAL.md  SBM-014-HUMAN-CAUSAL-ECHO.md  sbm-014-human.md
docs/reports/: IMPROVEMENTS.md  (+1 more)
include/: sbm_harness.h  sbm_snapshot.h  sbm_types.h
samples/: Registry.xlsx  invalid.json  valid.json  valid.ndjson
scripts/: check_coverage.py  check_digital_assets.py  generate_audit_report.py  repro_compare.py  run_batch.py
src/: sbm_snapshot.c  state_manager.c
tests/: fault_injection.c  test_bug_report_widget.py  test_digital_assets.py  test_event_validator.py  test_log_validation.py  test_renderer.py  test_report_normalization.py  test_sbm_014_causal_echo.py  test_seeding.py  test_state_field.py  unit_tests.c
(+33 files in other folders)
